[workspace]

members = [
    "bin/ch02-ex11-run-reflex-agent-once",
    "bin/ch02-ex12-evaluate-reflex-agent",
    "bin/mcts-connect-four-bin",
#    "bin/neural-networks-test",
    "lib/game/connect-four-logic",
    "lib/end-to-end/mcts-connect-four",
    "lib/book/monte-carlo-tree-search",
#    "lib/neural-networks",
    "lib/book/vacuum-cleaner",
    "lib/graphics",
    "wasm/wasm-bindgen-mcts-connect-four"
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = false

[profile.production]
inherits = "release"
