[package]
name = "monte-carlo-tree-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
num-traits = "0.2.15"
rand = "0.8.5"
rand_pcg = "0.3.1"
rustc-hash = "1.1.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

[dependencies.slotmap]
version = "1.0.6"
features = ["serde"]
