[package]
name = "mcts-connect-four"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
connect-four-logic = { path = "../../game/connect-four-logic" }
monte-carlo-tree-search = { path = "../../book/monte-carlo-tree-search" }
rand = "0.8.1"
rand_pcg = "0.3.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"