[package]
name = "connect-four-logic"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1.0"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"

[dev-dependencies]
proptest = "1.1.0"